--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@mui/material": "^7.1.1",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.16.0",
+    "primeflex": "^4.0.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.6.1"
+    "react-router": "^7.6.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.12.8",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
