--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "bootstrap": "^5.3.6",
+    "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
@@ -22,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
     "react-virtualized-auto-sizer": "^1.0.26",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
