--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.6",
     "formik": "^2.4.6",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.19.1",
+    "leaflet": "^1.9.4",
     "primereact": "^10.9.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-window": "^1.8.8",
