--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-number-format": "^5.4.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
     "react-virtualized-auto-sizer": "^1.0.26",
